--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load account %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -21,11 +22,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     
-    <script src="{% static 'scripts.js' %}"></script>
+
     
     {% block extra_js %}
     {% endblock %}
-
+    {% block extra_bonus_js %}
+    {% endblock %}
   </head>
   <body>
     
@@ -51,5 +53,6 @@
     <!--FOOTER AKA PLAYER-->
     <footer class="footer" id="player">
     </footer>
+    <script src="{% static 'scripts.js' %}"></script>
   </body>
 </html>
