--- a/index/templates/account/login.html
+++ b/index/templates/account/login.html
@@ -10,7 +10,7 @@
 
 {% if socialaccount_providers %}
 <p>{% blocktrans with site.name as site_name %}Please sign in with one
-of your existing third party accounts. Or, <a class="signup_link" method="GET" href="{{ signup_url }}" >sign up</a>
+of your existing third party accounts. Or, <a class="signup-link" method="GET" href="{{ signup_url }}" >sign up</a>
 for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
 <div class="socialaccount_ballot">
@@ -27,10 +27,10 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
 {% else %}
 <p>{% blocktrans %}If you have not created an account yet, then please
-<a class="signup_link" method="GET" href="{{ signup_url }}" >sign up</a> first.{% endblocktrans %}</p>
+<a class="signup-link" method="GET" href="{{ signup_url }}" >sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
 
-<form class="login_form" method="POST" action="{% url 'account_login' %}">
+<form class="login-form" method="POST" action="{% url 'account_login' %}">
   {% csrf_token %}
   {{ form.as_p }}
   <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
