--- a/index/templates/account/signup.html
+++ b/index/templates/account/signup.html
@@ -5,9 +5,9 @@
 
 <h1>{% trans "Sign Up" %}</h1>
 
-<p>{% blocktrans %}Already have an account? Then please <a class="login_link" href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<p>{% blocktrans %}Already have an account? Then please <a class="login-link" href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
-<form class="signup_form" id="signup_form" method="POST" action="{% url 'account_signup' %}">
+<form class="signup-form" method="POST" action="{% url 'account_signup' %}">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">{% trans "Sign Up" %} &raquo;</button>
