--- a/podcasts/templates/results.html
+++ b/podcasts/templates/results.html
@@ -1,37 +1,45 @@
+{% if podcasts %}
 {% for podcast in podcasts %}
 <div class="col-lg-2 col-md-3 col-sm-4 result-box">
-  <div class="container">
-    <div class="row">
-      <a class="col result-image podinfoz" id="{{ podcast.itunesid }}" href="{% url 'podinfo_ext' itunesid=podcast.itunesid %}">
-        <img src="{{ podcast.artworkUrl }}156x156bb.jpg" />
-        <div class="col">
-          <div class="row result-title">
-            <h6>{{ podcast.title }}</h6>
-          </div>
-          <div class="row result-genre">
-            <p>{% if podcast.genre.supa %}{{ podcast.genre.supa }} - {% endif %}{{ podcast.genre }}</p>
-          </div>
+  <div class="row">
+    <a class="col result-image show-podinfo" id="{{ podcast.itunesid }}" method="GET" href=
+     "{% url 'podinfo' itunesid=podcast.itunesid %}">
+      <img src="{{ podcast.artworkUrl }}156x156bb.jpg" />
+      <div class="col">
+        <div class="row result-title">
+          <h6>{{ podcast.title }}</h6>
         </div>
-      </a>
-    </div>
+        <div class="row result-genre">
+          <p>{% if podcast.genre.supa %}{{ podcast.genre.supa }} - {% endif %}{{ podcast.genre }}</p>
+        </div>
+      </div>
+    </a>
   </div>
 </div>
 {% endfor %}
 
 <script>
 $(function() {
-  $('.podinfoz').click(function(event) {
+  $('.show-podinfo').click(function(event) {
     event.preventDefault();
     var itunesid = this.id;
-    var url = this.href + "i";
+    var url = "{% url 'ajax_podinfo' %}";
+    var csrftoken = "{{ csrf_token }}";
     $.ajax({
-      type: "GET",
+      type: "POST",
       url: url,
+      data: {
+        "itunesid": itunesid,
+        "csrfmiddlewaretoken": csrftoken,
+      },
       error: function(xhr, ajaxOptions, thrownError){alert(thrownError);},
       success: function(response) {
-        $("#results").html(response);
+        $("#search-bar").hide();
+        $("#results").hide();
+        $("#podinfo").html(response);
       }
     });
   });
 });
 </script>
+{% endif %}
