added copyrighttext to podinfo

--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -28,7 +28,7 @@
       {% if podcast.explicit %}
         <p>Explicit</p>
       {% endif %}
-      <p><em>{{ podcast.copyright }}</em></p> 
+      <p><em>{{ podcast.copyrighttext }}</em></p> 
     </div>
   </div>
   
