--- a/podcasts/templates/ajax_podinfo.html
+++ b/podcasts/templates/ajax_podinfo.html
@@ -24,7 +24,7 @@
       {% if podcast.explicit %}
         <p>Explicit</p>
       {% endif %}
-      <p><em>{{ podcast.copyright }}</em></p> 
+      <p><em>{{ podcast.copyrighttext }}</em></p> 
     </div>
   </div>
   
