--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -21,27 +21,27 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-    
 
-    
+
+
     {% block extra_js %}
     {% endblock %}
     {% block extra_bonus_js %}
     {% endblock %}
   </head>
   <body>
-    
+
 <!--HERE BE NAVBAR-->
     <nav class="navbar fixed-top navbar-expand-lg">
       <div class="container nav-content">
         {% include 'navbar.html' %}
       </div>
     </nav>
-    <div class="container site-content">
+    <div class="container site-content" id="site-content">
     {% block content %}
     {% endblock %}
     </div>
-    
+
     <!--MODAL-->
     <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -49,10 +49,11 @@
         </div>
       </div>
     </div>
-    
+
     <!--FOOTER AKA PLAYER-->
     <footer class="footer" id="player">
     </footer>
     <script src="{% static 'scripts.js' %}"></script>
+
   </body>
 </html>
