--- a/podcasts/templates/ajax_subscriptions.html
+++ b/podcasts/templates/ajax_subscriptions.html
@@ -1,12 +1,14 @@
-{% if subscriptions %}
-<div class="col">
-{% for subscription in subscriptions %}
-  <div class="row">
-    <div class="col sub-box">
-      <h6>{{ subscription.pod.title }}</h6>
-      <p>{{ subscription.last_updated }}</p>
+<div class="row" id="subscriptions">
+  {% if subscriptions %}
+  <div class="col">
+  {% for subscription in subscriptions %}
+    <div class="row">
+      <div class="col sub-box">
+        <h6>{{ subscription.pod.title }}</h6>
+        <p>{{ subscription.last_updated }}</p>
+      </div>
     </div>
+  {% endfor %}
   </div>
-{% endfor %}
+  {% endif %}
 </div>
-{% endif %}
