--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -1,16 +1,18 @@
-{% extends 'index/index.html' %}
+{% extends 'index/header.html' %}
 
-{% block results %}
-{% if subscriptions %}
-<div class="col">
-{% for subscription in subscriptions %}
-  <div class="row">
-    <div class="col sub-box">
-      <h6>{{ subscription.pod.title }}</h6>
-      <p>{{ subscription.last_updated }}</p>
+{% block content %}
+<div class="row" id="subscriptions">
+  {% if subscriptions %}
+  <div class="col">
+  {% for subscription in subscriptions %}
+    <div class="row">
+      <div class="col sub-box">
+        <h6>{{ subscription.pod.title }}</h6>
+        <p>{{ subscription.last_updated }}</p>
+      </div>
     </div>
+  {% endfor %}
   </div>
-{% endfor %}
+  {% endif %}
 </div>
-{% endif %}
 {% endblock %}
