--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,13 +1,13 @@
 
 
-<a class="navbar-brand" href="{% url 'home' %}">dopepod</a>
+<a class="navbar-brand home" href="{% url 'home' %}">dopepod</a>
 <ul class="navbar-nav mr-auto">
   <li class="nav-item">
     <a class="nav-link" href="#">blog</a>
   </li>
   {% if user.is_authenticated %}
   <li class="nav-item">
-    <a class="nav-link" href="{% url 'edit_profile' %}">settings</a>
+    <a class="nav-link settings" href="{% url 'edit_profile' %}" data-toggle="modal" data-target="#modal">settings</a>
   </li>
   <li class="nav-item">
     <a class="nav-link subscriptions" type="GET" href="{% url 'subscriptions' %}">subscriptions</a>
@@ -49,7 +49,9 @@ $(function() {
     $.ajax({
       type: method,
       url: url,
-      error: function(xhr, ajaxOptions, thrownError){alert(thrownError);},
+      error: function(xhr, ajaxOptions, thrownError){
+        console.log(thrownError);
+      },
       success: function(response) {
         $(".modal-content").html(response.html);
       }
@@ -60,24 +62,70 @@ $(function() {
     $.ajax({
       type: "GET",
       url: "{% url 'account_logout' %}",
-      error: function(xhr, ajaxOptions, thrownError){alert(thrownError);},
+      error: function(xhr, ajaxOptions, thrownError){
+        console.log(thrownError);
+      },
       success: function() {
         refresh_page();
       }
     });
   });
-  $('.subscriptions').click(function(e) {
+  $('.home').click(function(e) {
     e.preventDefault();
-    var url = "{% url 'ajax_subscriptions' %}";
+    var url = "{% url 'home' %}";
+    var csrftoken = "{{ csrf_token }}";
+    $.ajax({
+      type: "POST",
+      url: url,
+      data: {
+        "csrfmiddlewaretoken": csrftoken,
+      },
+      error: function(xhr, ajaxOptions, thrownError){
+        console.log(thrownError);
+      },
+      success: function(response) {
+        var stateObj = { url: "url" };
+        // TODO make sure previous word not is subscriptions
+        history.pushState(stateObj, "page 2", url);
+        $(".site-content").html(response);
+      }
+    });
+  });
+  $('.settings').click(function(e) {
+    e.preventDefault();
+    var url = "{% url 'edit_profile' %}";
+    var csrftoken = "{{ csrf_token }}";
     $.ajax({
       type: "GET",
       url: url,
-      error: function(xhr, ajaxOptions, thrownError){alert(thrownError);},
+      data: {
+        "csrfmiddlewaretoken": csrftoken,
+      },
+      error: function(xhr, ajaxOptions, thrownError){
+        console.log(thrownError);
+      },
       success: function(response) {
-        // TODO hide searchbar?
-        var stateObj = { foo: "bar" };
+        $(".modal-content").html(response);
+      }
+    });
+  })
+  $('.subscriptions').click(function(e) {
+    e.preventDefault();
+    var url = "{% url 'subscriptions' %}";
+    var csrftoken = "{{ csrf_token }}";
+    $.ajax({
+      type: "POST",
+      url: url,
+      data: {
+        "csrfmiddlewaretoken": csrftoken,
+      },
+      error: function(xhr, ajaxOptions, thrownError){
+        console.log(thrownError);
+      },
+      success: function(response) {
+        var stateObj = { url: "url" };
         // TODO make sure previous word not is subscriptions
-        history.pushState(stateObj, "page 2", "subscriptions/");
+        history.pushState(stateObj, "page 2", url);
         $(".site-content").html(response);
       }
     });
