--- a/index/templates/index/ajax_edit_profile.html
+++ b/index/templates/index/ajax_edit_profile.html
@@ -26,8 +26,8 @@ $(function() {
         $("#podinfo").html(xhr.responseJSON.html);
       },
       success: function(response) {
-        console.log(response);
-        $("#podinfo").html("");
+        $(".modal-content").html("");
+        $("#modal").modal("hide");
       }
     });
   });
