--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -32,12 +32,12 @@
   <body>
 
 <!--HERE BE NAVBAR-->
-    <nav class="navbar fixed-top navbar-expand-lg">
+    <nav class="navbar navbar-light fixed-top navbar-expand-lg">
       <div class="container nav-content">
         {% include 'navbar.html' %}
       </div>
     </nav>
-    
+
     <div class="container site-content" id="site-content">
     {% block content %}
     {% endblock %}
