--- a/index/templates/index/ajax_subscriptions_base.html
+++ b/index/templates/index/ajax_subscriptions_base.html
@@ -4,7 +4,7 @@
 <script type="text/javascript">
 $(function() {
   // load tracks for podcast after page is loaded
-  var url = "{% url 'ajax_subscriptions' %}";
+  var url = "{% url 'subscriptions' %}";
   var csrftoken = "{{ csrf_token }}";
   $.ajax({
     type: "POST",
