--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,5 +1,3 @@
-
-
 <a class="navbar-brand home" href="{% url 'home' %}">dopepod</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon"></span>
@@ -24,18 +22,18 @@
   {% if user.is_authenticated %}
   <li>
     <a class="btn btn-primary ajax-logout" href="{% url 'account_logout' %}">
-      logout
+      Logout
     </a>
   </li>
   {% else %}
   <li>
     <a class="btn btn-primary ajax-register" href="{% url 'account_signup' %}" data-toggle="modal" data-target="#modal">
-      register
+      Register
     </a>
   </li>
   <li>
     <a class="btn btn-primary ajax-login" href="{% url 'account_login' %}" data-toggle="modal" data-target="#modal">
-      login
+      Login
     </a>
   </li>
   {% endif %}
@@ -90,9 +88,9 @@ $(function() {
         console.log(thrownError);
       },
       success: function(response) {
-        var stateObj = { url: url };
+        var stateObj = {"context": response};
         // TODO make sure previous word not is subscriptions
-        history.pushState(stateObj, "page 2", url);
+        history.pushState(stateObj, "", url);
         $(".site-content").html(response);
       }
     });
@@ -113,17 +111,22 @@ $(function() {
   })
   $('.subscriptions').click(function(e) {
     e.preventDefault();
-    var url = "{% url 'ajax_subscriptions' %}";
+    var url = "{% url 'subscriptions' %}";
+    var csrftoken = "{{ csrf_token }}";
     $.ajax({
-      type: "GET",
+      type: "POST",
       url: url,
+      data: {
+        "ajax": "yep",
+        "csrfmiddlewaretoken": csrftoken,
+      },
       error: function(xhr, ajaxOptions, thrownError){
         console.log(thrownError);
       },
       success: function(response) {
-        var stateObj = { url: url };
+        var stateObj = {"context": response};
         // TODO make sure previous word not is subscriptions
-        history.pushState(stateObj, "page 2", url);
+        history.pushState(stateObj, "", url);
         $(".site-content").html(response);
       }
     });
@@ -131,7 +134,8 @@ $(function() {
   $(window).on('popstate', function(event) {
     var state = event.originalEvent.state;
     if (state) {
-        console.log(state)
+      console.log(state);
+      $(".site-content").html(state.context);
     }
   });
 });
