--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,5 +1,5 @@
   <div class="d-flex justify-content-center">
-    <audio controls preload="metadata">
-      <source src="{{ track.url }}" type="{{ track.type }}"/>
+    <audio controls preload="metadata" autoplay>
+      <source src="{{ track.url }}" type="{{ track.type }}" />
     </audio>
   </div>
