--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -10,6 +10,7 @@
     <p>{{ podcast.description }}</p>
   </div>
   <div class="col-sm-3">
+    <!-- back button refresh this somehow -->
     {% if podcast.subscribed %}
     <form class="sub-form" action="{% url 'subscribe' %}" id="{{ podcast.itunesid }}" method="POST">
       <input type="submit" class="btn btn-dark" id="sub-button" value="Unsubscribe">
