--- a/podcasts/templates/tracks.html
+++ b/podcasts/templates/tracks.html
@@ -1,19 +1,19 @@
 <div class="col">
-{% for item in items %}
+{% for track in tracks %}
 <div class="row">
   <a class="col-sm-9" data-toggle="collapse" href="#collapseExample{{ forloop.counter }}" aria-expanded="false" aria-controls="collapseExample{{ forloop.counter }}">
-    <h6>{{ item.title }}</h6>
+    <h6>{{ track.title }}</h6>
   </a>
   <div class="col-sm-3">
-    <button class="btn btn-primary play" id="{{ item.url }}" name="{{ item.filetype }}" type="button">Play</button>
-    <a class="btn btn-primary" type="button" href="{{ item.url }}">Download</a>
+    <button class="btn btn-primary play" id="{{ track.url }}" name="{{ track.filetype }}">Play</button>
+    <a class="btn btn-primary" href="{{ track.url }}">Download</a>
   </div>
 </div>
 <div class="row">
   <div class="collapse" id="collapseExample{{ forloop.counter }}">
     <div class="col">
-      <p>{{ item.summary|escape }}</p>
-      <p>{{ item.pubDate }}</p>
+      <p>{{ track.summary|escape }}</p>
+      <p>{{ track.pubDate }}</p>
     </div>
   </div>
 </div>
@@ -24,14 +24,14 @@
 $(function () {
     $(".play").click(function() {
     var url = this.id;
-    var filetype = this.name;
+    var type = this.name;
     var csrftoken = "{{ csrf_token }}";
     $.ajax({
       method: "POST",
       url: "{% url 'play' %}",
       data: {
         "url": url,
-        "filetype": filetype,
+        "type": type,
         "csrfmiddlewaretoken": csrftoken,
       },
       success: function(response) {
@@ -41,4 +41,3 @@ $(function () {
   });
 })
 </script>
-
