--- a/index/templates/index/ajax_subscriptions_base.html
+++ b/index/templates/index/ajax_subscriptions_base.html
@@ -4,13 +4,14 @@
 <script type="text/javascript">
 $(function() {
   // load tracks for podcast after page is loaded
-  var url = "{% url 'ajax_subscriptions' %}";
+  var url = "{% url 'subscriptions' %}";
   var csrftoken = "{{ csrf_token }}";
   $.ajax({
     type: "POST",
     url: url,
     data: {
       "csrfmiddlewaretoken": csrftoken,
+      "ajax": "yep",
     },
     error: function(xhr, ajaxOptions, thrownError){
       console.log(thrownError);
