--- a/index/static/style.css
+++ b/index/static/style.css
@@ -12,6 +12,8 @@ nav {
 
 .site-content {
   background: rgba(255, 255, 255, 1);
+  min-height: 100vh;
+  border: 1px solid black;
 }
 
 .search-bar {
@@ -113,8 +115,8 @@ nav {
 }
 
 .podinfo {
-  padding-top: 80px;
-  margin: 10px;
+  margin-top: 80px;
+  padding: 10px;
 }
 
 .tracks {
