--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -16,7 +16,7 @@
       <a class="nav-link subscriptions" href="{% url 'subscriptions' %}">subscriptions</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link subscriptions" href="{% url 'browse' %}">browse</a>
+      <a class="nav-link browse" href="{% url 'browse' %}">browse</a>
     </li>
     {% endif %}
   </ul>
