--- a/podcasts/templates/tracks.html
+++ b/podcasts/templates/tracks.html
@@ -5,7 +5,7 @@
     <h6>{{ track.title }}</h6>
   </a>
   <div class="col-sm-3">
-    <button class="btn btn-primary play" id="{{ track.url }}" name="{{ track.filetype }}">Play</button>
+    <button class="btn btn-primary play" id="{{ track.url }}" name="{{ track.type }}">Play</button>
     <a class="btn btn-primary" href="{{ track.url }}">Download</a>
   </div>
 </div>
