--- a/index/templates/index/ajax_index.html
+++ b/index/templates/index/ajax_index.html
@@ -117,6 +117,7 @@ $(function() {
     var genre = $("input[name=genre-select]:checked").val();
     var language = $("input[name=language-select]:checked").val();
     var explicit = $("input[name=explicit-select]").is(":checked");
+    var csrftoken = "{{ csrf_token }}";
     // if input is at least minlength, go ahead and search
     if(q.length >= minlength) {
       $.ajax({
@@ -127,8 +128,11 @@ $(function() {
           "genre": genre,
           "language": language,
           "explicit": explicit,
+          "csrfmiddlewaretoken": csrftoken,
         },
-        error: function(xhr, ajaxOptions, thrownError){ alert(thrownError); },
+        error: function(xhr, ajaxOptions, thrownError) {
+          console.log(thrownError);
+        },
         success: function(response) {
           $("#results").html(response);
         }
